added colour to headings

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylessheet.css">
+
+
 </head>
 <body>
     
-</body>
+    <h1 class="headings">Capitals</h1>
+    <h2 class="headings">London</h2>
+    <p>London is capital of England.</p>
+    <h2 class="headings">Paris</h2>
+    <p>Paris is capital of France.</p>
+    </body>
+
 </html>
