--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2 class="headings">London</h2>
     <p class="paragraphs">London is capital of England.</p>
     <h2 class="headings">Paris</h2>
-    <p class="paragraphs">Paris is capital of France.</p>
+    <p class="parisparagraphs">Paris is capital of France.</p>
     </body>
 
 </html>
