added backgorund colur with id to h2

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     
     <h1 class="headings">Capitals</h1>
-    <h2 class="headings">London</h2>
-    <p class="paragraphs">London is capital of England.</p>
+    <h2 class="headings" id="myheader">London</h2>
+    <p>London is capital of England.</p>
     <h2 class="headings">Paris</h2>
     <p class="parisparagraphs">Paris is capital of France.</p>
     </body>
